Fix bug 12184, don't wrap long collection names.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@7187 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo-js/src/cosmo/themes/default/CollectionSelector.css
+++ b/cosmo-js/src/cosmo/themes/default/CollectionSelector.css
@@ -17,6 +17,10 @@
     padding-left: 5px;
     float: left;
     height: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 142px;
+    white-space: nowrap;
 }
 .cosmoCollectionSelectorCalSelect .collectionSelectorCollectionName {
 
